# HybridRadiography

./: .gitignore  hy_rad.yml  readme.md
_utilities/: activate_env.py  defaults.py  greyscales_to_matpaths.py  hashing.py  img_manip.py  run_length_encoding.py  tools.py  voxelisation.py
cpp2p/: py_matpath.cp310-win_amd64.pyd  py_rays.cp310-win_amd64.pyd
engine/: CMakeLists.txt  material_path.pyd  material_path2.pyd  rays.pyd  setup.py
engine/include/: Buffer.h  Detector.h  Euler.h  FileChecks.h  ICPIntersectCaster.h  InspecTest.h  LengthCalc.h  Mesh.h  Rasterisation.h  RenWin.h  STLReader.h  VectorMaths.h  _definitions.h  glm_compat.h  glm_support.h  glm_vm.h
engine/python/: matpath_module.cpp  py_module.cpp  rays_module.cpp
engine/src/: Buffer.cpp  Detector.cpp  Euler.cpp  FileChecks.cpp  ICPIntersectCaster.cpp  InspecTest.cpp  LengthCalc.cpp  Mesh.cpp  Rasterisation.cpp  RenWin.cpp  STLReader.cpp  VectorMaths.cpp  glm_support.cpp  glm_vm.cpp  main.cpp  main_sdl.cpp  material_path.cpp  material_path2.cpp  py_module.cpp
hy_rad/: hybrid_radiography.py  registration.py
hy_rad/drama_fin/: chugs.py  clean_gen.py  delete_this_file.py  fin_registration.py  fin_registration2.py  fin_whole.py  fits2.pkl  noisy_gen.py  notes.txt  patch_analysis.py  patch_analysis_noisy.py  play.py  run_hybrid.py
hy_rad/old_examples/tiles_scan_1/: 20190920_hyrad.py  notes.txt  patch_analysis.py  tiles_bottom_fillet.py  tiles_bottom_whole.py  tiles_registration.py
hy_rad/old_examples/tiles_scan_2/: 20191105_top_reg.pkl  chugger.py  startingMpgsObjKwargs.pkl  tiles_registration.py
metrics/: __init__.py  blur_matching.py  detectability.py  registration_metrics.py  sei_detectability.py
optimisation/: coordinate_handling.py  spuci_optimiser.py
outputs/: plotting.py  report_template.html  reporting.py
reconstruction/: image_stack.py  recon.py
sampling/: samplers.py
simulation/: __init__.py  _old_engine_interface.py  coordinates.py  engine_interface.py  mapping.py  poisson.py  transformations.py
testdata/: xyzCube.stl  xyzCube_ascii.stl  xyzCube_binary.stl
tests/: test_optimisation.py  test_reconstruction.py  test_sampling.py  test_simulation.py  test_utilities.py
